fixing many layout issues
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@3393 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/UnifiedSearch/skin/pathsearch.css
+++ b/extensions/UnifiedSearch/skin/pathsearch.css
@@ -5,7 +5,7 @@
 #us_searchresults_tab {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 2px;
     border-spacing: 0;
     width: 98%;
 }
@@ -15,12 +15,6 @@
     padding: 3px;
     cursor: pointer;
     color: #666;
-}
-
-#us_pathsearch_close {
-	font-size: smaller;
-	display: none;
-	cursor:pointer;
 }
 
 #pathsearchresult {
@@ -85,8 +79,6 @@
 }
 
 #pathsearchresult td.propSpacer {
-	border-spacing: 0;
-	padding: 0;
 	width: 50%;
 	height: 50%;
 }
@@ -115,6 +107,11 @@
 	border-bottom: 1px solid #F7F7F7;
 	width: 100%;
 	height: 50%;
+}
+
+#pathsearchresult td.instanceValues {
+	background-color: #FFF;
+	white-space: nowrap;
 }
 
 #us_resultinfo_path {
